--- a/public/sass/pages/_settings.scss
+++ b/public/sass/pages/_settings.scss
@@ -1,12 +1,42 @@
-$settings_button_bg: #b3b3b3;
+$settings_button_bg: transparent;
+$settings_button_border: #fff;
+$settings_button_color_primary: #b3b3b3;
+$settings_button_color_hover: #fff;
 
-.settings {
-    //user-select: all;
+.settings_box {
+    & .input_checkbox:checked + label {
+      background: #3a3938;
+    }
+    & .input_checkbox + label {
+      background: #262626;
+      padding: 0.5rem 2rem;
+      border-radius: 2rem;
+    }
+  }
 
-    & .settings_button {
-        background: $settings_button_bg;
-        border: none;
-        border-radius: 1rem;
-        text-align: center;
+.settings_button {
+    background: $settings_button_bg;
+    color: $settings_button_color_primary;
+    font-weight: 300;
+    border: 1px solid $settings_button_border;
+    border-radius: 2rem;
+    text-align: center;
+    padding: 0.15rem 1rem;
+
+    &:hover {
+        transform: scale(1.1);
+        color: $settings_button_color_hover;
+    }
+}
+
+.link_button {
+    text-decoration: none;
+    color: $settings_button_color_primary;
+    font-size: 2rem;
+
+    &:hover {
+        transform: scale(1.1);
+        text-decoration: none;
+        color: $settings_button_color_hover;
     }
 }
